<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item android:id="@+id/home_item"
       android:enabled="true"
       android:icon="@drawable/home_icon"
       android:title="Home"/>

    <item android:id="@+id/search_item"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:title="Search"/>
    <item android:id="@+id/setting_item"
        android:enabled="true"
        android:icon="@drawable/setting_icon"
        android:title="Settings"/>

</menu>