<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activities.Login">

    <ImageView
        android:id="@+id/header"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:src="@drawable/netflix_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

       />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enter_email"
        android:src="@drawable/logo"/>


    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textColorHint="@color/black"
        android:singleLine="true"
        android:background="@drawable/layout_bg"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="20dp"
        android:hint="Email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/enter_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textColor="@color/black"
        android:background="@drawable/layout_bg"
        android:paddingLeft="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_stroke"
        android:fontFamily="@font/josefinsans_semi_bold"
        android:text="Sign In"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/Dont_Sign_up"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_password"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/josefinsans_semi_bold"
        android:text="Forget?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Login"
        app:layout_constraintVertical_bias="0.116"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/Dont_Sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnStepOne"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/josefinsans_semi_bold"
        android:text="Don't have an Account? Sign Up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_Login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget"
        app:layout_constraintVertical_bias="0.46" />

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:theme="@style/Theme.custom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Dont_Sign_up"/>


</androidx.constraintlayout.widget.ConstraintLayout>