<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainScreens.Settings">

    <include layout="@layout/settings_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:fontFamily="@font/fredoka"
            android:text="We will send you an email with instructions to reset the password"
            android:textSize="22dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:id="@+id/emailSetting"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="Email"
            android:textSize="22dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/resettextview_drawable"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:id="@+id/planSetting"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="Plan"
            android:textSize="22dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/resettextview_drawable"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <TextView
            android:id="@+id/dateSetting"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="Date"
            android:textSize="22dp"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/resettextview_drawable"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>


        <EditText
            android:id="@+id/et_pwReset"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:background="@drawable/layout_bg"
            android:padding="10dp"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Current Password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.427" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/btnResetPW"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/resetbutton_drawable"
            android:text="Reset Password"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/btnSignout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/resetbutton_drawable"
            android:text="Signout"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/settingNavig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">



        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/bottom_navigation"
            app:menu="@menu/bottom_menu"
            app:itemIconTint="@drawable/item_selected"
            app:itemTextColor="@drawable/item_selected"
            app:labelVisibilityMode="labeled" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>