...


    </LinearLayout>


    <androidx.constraintlayout.utils.widget.MotionButton
        android:id="@+id/btnGetStart"
        android:onClick="btnGetStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Red"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/Blue"
        android:text="Get Started"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_circle" />


...
